Changes from jTDS 1.2.7
=======================

10/27/2012 - Holger Rehn
 o Fixed build script, Maven artifacts are no included in the distro package.

===============================================================================
10/27/2012 - jTDS 1.3.0 released
===============================================================================

Changes from jTDS 1.2.6
=======================

10/26/2012 - Holger Rehn
 o Added test for bug #638, preparedStatement.setTimestamp sets seconds to 0.
 o Added test for bug #644, updateNull not working with MSSQL DECIMAL field.
 o Added test for bug #500, Statement.execute() fails if using cursors and
   SHOWPLAN_ALL is set to ON.
 o Fixed bug #528, any ResultSet gets dropped when using RETURN_GENERATED_KEYS.
 o A ResultSet returned by Statement.getGeneratedKeys() is no longer updatable.

10/25/2012 - Holger Rehn
 o Improved the database meta data by adding (JDBC4) column IS_AUTOINCREMENT.
 o Removed unnecessary console logging from various unit tests.
 o Improved performance by implementing non-blocking access to internal state.
 o Improved overall driver performance by avoiding lookup of virtual data
   streams, required for any request/response.

10/24/2012 - Holger Rehn
 o Fixed a bug that caused Statement.close() to throw an exception for errors
   caused by previously executed SQL statements.
 o Added unit tests for bugs #473 and #635.

10/23/2012 - Holger Rehn
 o Implemented non-locking SharedSocket finalizer (bug #609).
 o Greatly improved virtual socket management performance if a large number of
   statements is opened for a single connection.
 o Improved logging, data stream IDs are not reused for a reasonable time span.

10/18/2012 - Holger Rehn
 o Added test for bug #632, year-check 1753-9999 not valid for type DATE.
 o Added test for bug #624, MS SQL Server 2008 full text search problem.
 o Removed shell scripts for building jTDS from the Windows/Linux console.